yaml/pmap-srvt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: pmap-srvt
  name: pmap-srvt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pmap-srvt
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: pmap-srvt
    spec:
      containers:
        - image: 10.230.7.2/yg-dmz-ns/pmap-srvt:latest
          name: pmap-srvt-deployment
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
              - name: yg-dmz-ns-pmap-srvt-default-image-pull-secret

status: {}
